--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ a{  }
 
 <a href="sexo.html"> <button class="button button1">SEXO</button></a></p>
 
-<a href="PERNA.html"> <button class="button button1">PERNA</button></a></p>
+<a href="perna.html"> <button class="button button1">PERNA</button></a></p>
 
 </div>
 
