--- a/rosto.html
+++ b/rosto.html
@@ -83,7 +83,7 @@ body{
 <div align="center" class="centro">
 
 
-<iframe src="https://www.dailymotion.com/embed/video/k7eFvSZTaPYtsDwMe4n?autoplay=1&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="620" height="540" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="BRA&amp;Ccedil;O 1"></iframe>
+<iframe src="https://www.dropbox.com/s/3aehnm8tc00n0a4/rosto.mp4?dl=0" width="620" height="540" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="BRA&amp;Ccedil;O 1"></iframe>
 
 </p>
 <a href="index.html"> <button class="button button1">VOLTAR</button></a></p>
