--- a/rosto.html
+++ b/rosto.html
@@ -82,8 +82,11 @@ body{
 
 <div align="center" class="centro">
 
-
-<iframe src="https://www.dropbox.com/s/3aehnm8tc00n0a4/rosto.mp4?dl=0" width="620" height="540" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="BRA&amp;Ccedil;O 1"></iframe>
+<video controls autoplay>
+  <source src="https://www.dropbox.com/s/3aehnm8tc00n0a4/rosto.mp4?dl=0" type="video/mp4">
+</video>
+  
+  
 
 </p>
 <a href="index.html"> <button class="button button1">VOLTAR</button></a></p>
