--- a/rosto.html
+++ b/rosto.html
@@ -83,7 +83,7 @@ body{
 <div align="center" class="centro">
 
 <video controls autoplay>
-  <source src="https://www.dropbox.com/s/3aehnm8tc00n0a4/rosto.mp4?dl=0" type="video/mp4">
+  <source src="https://www.dropbox.com/s/3aehnm8tc00n0a4/rosto.mp4?raw=1" type="video/mp4">
 </video>
   
   
