--- a/braco.html
+++ b/braco.html
@@ -82,9 +82,12 @@ body{
 
 <div align="center" class="centro">
 
-<iframe src="https://www.dailymotion.com/embed/video/k7n6K6PUF2pFT6wMe0l?autoplay=1&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="520" height="440" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="BRA&amp;Ccedil;O 1"></iframe>
-
-<iframe src="https://www.dailymotion.com/embed/video/k7lYVA8M0Kr6XHwMe0m?autoplay=1&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="520" height="440" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="BRA&amp;Ccedil;O 1"></iframe>
+<video controls autoplay>
+  <source src="https://www.dropbox.com/s/kp7nkhrtl7fxy3d/braco2.mp4?dl=0" type="video/mp4">
+</video>
+<video controls autoplay>
+  <source src="https://www.dropbox.com/s/kp7nkhrtl7fxy3d/braco2.mp4?dl=0" type="video/mp4">
+</video>
 
 
 
