--- a/peito.html
+++ b/peito.html
@@ -79,17 +79,18 @@ body{
 <body>
 
 
-
 <div align="center" class="centro">
 
-
-<iframe src="https://www.dailymotion.com/embed/video/k96dKOPW1yoUIfwMe4l?autoplay=1&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="620" height="540" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="BRA&amp;Ccedil;O 1"></iframe>
+<video controls autoplay>
+  <source src="https://www.dropbox.com/s/4aj4e1cz04dmtpw/peito.mp4?dl=0" type="video/mp4">
+</video>
+  
+  
 
 </p>
 <a href="index.html"> <button class="button button1">VOLTAR</button></a></p>
 
 </div>
-
 
 
 
